@@ -109,7 +109,7 @@ export(segmentSentence)
 export(settings)
 export(settingsInitialize)
 export(similarity)
-export(smooth)
+export(smoothdfm)
 export(statLexdiv)
 export(stopwordsGet)
 export(stopwordsRemove)
